<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
	
	<ImageView
			android:id="@+id/app_logo"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:src="@drawable/location"
			android:contentDescription="@string/app_logo"
			app:layout_constraintHorizontal_bias="1.0"
			android:layout_marginTop="150dp"/>
	
	<TextView
			android:id="@+id/app_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textSize="20sp"
			android:textColor="#000000"
			android:textAllCaps="true"
			android:padding="@dimen/main_padding"
			app:layout_constraintTop_toBottomOf="@+id/app_logo"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			android:text="@string/gps_picker"/>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:gravity="center_horizontal"
			android:textSize="15sp"
			android:textColor="#000000"
			android:layout_alignParentBottom="true"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			android:padding="@dimen/main_padding"
			android:text="@string/powered_by"/>

</androidx.constraintlayout.widget.ConstraintLayout>
